--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/account/accountEdit.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/account/accountEdit.xhtml
@@ -28,8 +28,7 @@
 								sizeExceededLabel="#{msg.fileUploadSizeExceededLabel}"
 								doneLabel="#{msg.fileUploadDoneLabel}"
 								listHeight="60px"
-								maxFilesQuantity="1"
-								limitRender="1">
+								maxFilesQuantity="1">
 				</rich:fileUpload>
 				
 				<h:outputLabel value="#{msg.privateAreaLoginName}:" for="userName"/>
