--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/advertisement/advertisementList.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/advertisement/advertisementList.xhtml
@@ -72,7 +72,7 @@
 	</ui:define>
 	
 	<ui:define name="accountBottomButtons">
-		<h:commandButton value="#{msg.privateAreaActionNew}" styleClass="customButton2 buttonMainForm" action="#{advertisementBean.prepareNew}" immediate="true" />
+		<h:commandButton value="#{msg.privateAreaActionNew}" styleClass="customButton2 buttonMainForm" action="#{advertisementBean.prepareNewStepOne}" immediate="true" />
 	</ui:define>
 	
 </ui:composition>
