--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/base.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/base.xhtml
@@ -52,12 +52,19 @@
 											<h:commandLink style="margin-left: 8px;" action="#{userAccountBean.logoff}" value="#{msg.logoffCamelCaseMsg}"/>
 										</li>
 										<li>
-											<h:commandLink action="#{advertisementBean.prepareNew}" value="#{msg.advertisementNewAdvertisement}" />
+											<h:commandLink action="#{advertisementBean.prepareNewStepOne}" value="#{msg.advertisementNewAdvertisement}" />
 										</li>
 									</c:otherwise>
 								</c:choose>
-								<li><h:commandLink action="#{userAccountBean.consult}" value="#{msg.myRegister}"/></li>
-								<li style="border: 0px;"><a href="#">#{msg.contact}</a></li>
+								<li>
+									<h:commandLink action="#{userAccountBean.consult}" value="#{msg.myRegister}"/>
+								</li>
+								<li>
+									<h:commandLink action="#{siteBean.goToIndex}" value="#{msg.appStart}" />
+								</li>
+								<li style="border: 0px;">
+									<a href="#">#{msg.contact}</a>
+								</li>
 							</ul>
 						</div>
 						
