--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/base.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/base.xhtml
@@ -19,6 +19,7 @@
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-shared.css" />
    			<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
    			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
+   			<script type="text/javascript" src="/org.richfaces.resources/javax.faces.resource/org.richfaces.staticResource/4.2.2.Final/PackedCompressed/jquery.js"></script>
    		</h:head>
    		
    		<h:body>
