--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/advertisementType/advertisementTypeForm.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/advertisementType/advertisementTypeForm.xhtml
@@ -2,7 +2,8 @@
 				xmlns:ui="http://java.sun.com/jsf/facelets"
 				xmlns:h="http://java.sun.com/jsf/html"
 				xmlns:t="http://myfaces.apache.org/tomahawk"
-				xmlns:rich="http://richfaces.org/rich">
+				xmlns:rich="http://richfaces.org/rich"
+				xmlns:bargas="http://barganhas.com.br/barganhas">
 				
 	<h:panelGrid styleClass="tableInputForm" columns="2" columnClasses="columnLabel, columnInput">
 		<!-- title -->
@@ -16,7 +17,7 @@
 		
 		<!-- currency -->
 		<h:outputLabel value="#{msg.privateAreaCurrencyValue} ( #{msg.privateAreaCurrencySymbolReal} ):" for="currency"/>
-		<h:inputText id="currency" value="#{advertisementTypeBean.advertisementType.value}" maxlength="11" styleClass="inputMainForm mediumInputMainForm"/>
+		<bargas:inputCurrency id="currency" value="#{advertisementTypeBean.advertisementType.value}" maxlength="10" styleClass="inputMainForm mediumInputMainForm"/>
 		
 		<!-- advertisiment score -->
 		<h:outputLabel value="#{msg.privateAreaAdvertisementScore}:" for="advertisementScore"/>
