--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/base.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/base.xhtml
@@ -13,13 +13,14 @@
    		<f:loadBundle var="msg" basename="messages"/>
    		<h:head>
    			<title><h:outputText value="#{msg.appTitle}"/></title>
+   			<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-site.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-messages.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-richfaces.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-shared.css" />
-   			<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-   			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
    			<script type="text/javascript" src="/org.richfaces.resources/javax.faces.resource/org.richfaces.staticResource/4.2.2.Final/PackedCompressed/jquery.js"></script>
+   			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
+   			<script src="#{request.contextPath}/javascript/jquery.maskMoney.js" type="text/javascript" />
    		</h:head>
    		
    		<h:body>
