--- a/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
+++ b/trunk/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
@@ -62,7 +62,7 @@
 						               styleClass="menuItem menuItemAdvertisementType">
 						</h:commandLink>
 						
-						<h:commandLink action="#{administracaoBean.loadPage}"
+						<h:commandLink action="#{userAccountBean.adminListUsers}"
 						               value="#{msg.privateAreaUsers}"
 						               immediate="true"
 						               rendered="true"
