--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
@@ -8,7 +8,7 @@
    	<f:view contentType="text/html">
    		<f:loadBundle var="msg" basename="messages"/>
    		<h:head>
-   			<title><h:outputText value="#{msg.privateAreaTitle}"/></title>
+   			<title><h:outputText value="#{msg.privateAreaAdminTitle}"/></title>
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-admin.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-messages.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-richfaces.css" />
