--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/bases/adminbase.xhtml
@@ -69,7 +69,7 @@
 						               styleClass="menuItem menuItemUsers">
 						</h:commandLink>
 						
-						<h:commandLink action="#{administracaoBean.loadPage}"
+						<h:commandLink action="#{advertisementBean.adminListAdvertisements}"
 						               value="#{msg.privateAreaAdvertisement}"
 						               immediate="true"
 						               rendered="true"
