--- a/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/userAccount/userAccountConsult.xhtml
+++ b/APP/ECLIPSE_PROJECT/barganhas/project/war/xhtml/admin/userAccount/userAccountConsult.xhtml
@@ -43,7 +43,11 @@
 		<h:commandButton value="#{msg.privateAreaActionDelete}" styleClass="customButton buttonMainForm"
 				action="#{userAccountBean.adminDeleteUser}" immediate="false" onclick="#{msg.actionConfirmDelete}"/>
 		<h:commandButton value="#{msg.msgLock} #{msg.userAccount}" styleClass="customButton buttonMainForm"
-				action="#{userAccountBean.adminLockUser}" immediate="false" onclick="#{msg.actionConfirmLock}"/>
+				action="#{userAccountBean.adminLockUser}" immediate="false" onclick="#{msg.actionConfirmLock}"
+				rendered="#{userAccountBean.userAccount.status eq 'ACTIVE'}"/>
+		<h:commandButton value="#{msg.msgUnlock} #{msg.userAccount}" styleClass="customButton buttonMainForm"
+				action="#{userAccountBean.adminUnlockUser}" immediate="false" onclick="#{msg.actionConfirmUnlock}"
+				rendered="#{userAccountBean.userAccount.status eq 'LOCKED'}"/>
 		<h:commandButton value="#{msg.privateAreaActionCancel}" styleClass="customButton buttonMainForm"
 				action="#{userAccountBean.adminListUsers}" immediate="true"/>
 	</ui:define>
